# commonpython

./: .bandit  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.cursor/rules/: doxygen-comment.mdc
.github/workflows/: code-quality.yml  tests.yml
commonpython/: __init__.py  exceptions.py
commonpython/adapters/: __init__.py  db2_cli_adapter.py  db2_library_adapter.py  mq_cli_adapter.py  mq_library_adapter.py
commonpython/cli/: __init__.py  cli.py
commonpython/config/: __init__.py  config_manager.py
commonpython/database/: __init__.py  db2_manager.py
commonpython/factories/: __init__.py  manager_factory.py
commonpython/framework/: __init__.py  component_base.py  component_registry.py  component_runner.py
commonpython/interfaces/: __init__.py  database_interface.py  messaging_interface.py
commonpython/logging/: __init__.py  logger_manager.py
commonpython/messaging/: __init__.py  mq_manager.py
config/: component_config.yaml  config.yaml
docs/: ADAPTER_ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INSTALLATION.md
docs/html/: _a_d_a_p_t_e_r___a_r_c_h_i_t_e_c_t_u_r_e_8md.html  _c_h_a_n_g_e_l_o_g_8md.html  _c_o_n_t_r_i_b_u_t_i_n_g_8md.html  _d_e_v_e_l_o_p_m_e_n_t___g_u_i_d_e_8md.html  _i_m_p_l_e_m_e_n_t_a_t_i_o_n___s_u_m_m_a_r_y_8md.html  _i_m_p_r_o_v_e_m_e_n_t_s_8md.html  _i_n_s_t_a_l_l_a_t_i_o_n_8md.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  classcommonpython_1_1adapters_1_1db2__cli__adapter_1_1_d_b2_c_l_i_adapter-members.html  classcommonpython_1_1adapters_1_1db2__cli__adapter_1_1_d_b2_c_l_i_adapter.html  classcommonpython_1_1adapters_1_1db2__cli__adapter_1_1_d_b2_c_l_i_adapter.js  classcommonpython_1_1adapters_1_1db2__library__adapter_1_1_d_b2_library_adapter-members.html  classcommonpython_1_1adapters_1_1db2__library__adapter_1_1_d_b2_library_adapter.html  classcommonpython_1_1adapters_1_1db2__library__adapter_1_1_d_b2_library_adapter.js  classcommonpython_1_1adapters_1_1mq__cli__adapter_1_1_m_q_c_l_i_adapter-members.html  classcommonpython_1_1adapters_1_1mq__cli__adapter_1_1_m_q_c_l_i_adapter.html  classcommonpython_1_1adapters_1_1mq__cli__adapter_1_1_m_q_c_l_i_adapter.js  classcommonpython_1_1adapters_1_1mq__library__adapter_1_1_m_q_library_adapter-members.html  classcommonpython_1_1adapters_1_1mq__library__adapter_1_1_m_q_library_adapter.html  classcommonpython_1_1adapters_1_1mq__library__adapter_1_1_m_q_library_adapter.js  classcommonpython_1_1cli_1_1cli_1_1_c_l_i-members.html  classcommonpython_1_1cli_1_1cli_1_1_c_l_i.html  classcommonpython_1_1cli_1_1cli_1_1_c_l_i.js  classcommonpython_1_1config_1_1config__manager_1_1_config_manager-members.html  classcommonpython_1_1config_1_1config__manager_1_1_config_manager.html  classcommonpython_1_1config_1_1config__manager_1_1_config_manager.js  classcommonpython_1_1database_1_1db2__manager_1_1_d_b2_manager-members.html  classcommonpython_1_1database_1_1db2__manager_1_1_d_b2_manager.html  classcommonpython_1_1database_1_1db2__manager_1_1_d_b2_manager.js  classcommonpython_1_1exceptions_1_1_adapter_error-members.html  classcommonpython_1_1exceptions_1_1_adapter_error.html  classcommonpython_1_1exceptions_1_1_adapter_initialization_error-members.html  classcommonpython_1_1exceptions_1_1_adapter_initialization_error.html  classcommonpython_1_1exceptions_1_1_adapter_not_available_error-members.html  classcommonpython_1_1exceptions_1_1_adapter_not_available_error.html  classcommonpython_1_1exceptions_1_1_c_l_i_command_error-members.html  classcommonpython_1_1exceptions_1_1_c_l_i_command_error.html  classcommonpython_1_1exceptions_1_1_c_l_i_error-members.html  (+442 more)
docs/latex/: _a_d_a_p_t_e_r___a_r_c_h_i_t_e_c_t_u_r_e_8md.tex  _c_h_a_n_g_e_l_o_g_8md.tex  _c_o_n_t_r_i_b_u_t_i_n_g_8md.tex  _d_e_v_e_l_o_p_m_e_n_t___g_u_i_d_e_8md.tex  _i_m_p_l_e_m_e_n_t_a_t_i_o_n___s_u_m_m_a_r_y_8md.tex  _i_m_p_r_o_v_e_m_e_n_t_s_8md.tex  _i_n_s_t_a_l_l_a_t_i_o_n_8md.tex  annotated.tex  classcommonpython_1_1adapters_1_1db2__cli__adapter_1_1_d_b2_c_l_i_adapter.eps  classcommonpython_1_1adapters_1_1db2__cli__adapter_1_1_d_b2_c_l_i_adapter.tex  classcommonpython_1_1cli_1_1cli_1_1_c_l_i.tex  (+277 more)
examples/: component_template.py  quick_start.py
scripts/: README.md  test_commonpython.py
test/: __init__.py  test_adapters.py  test_cli.py  test_component.py  test_component_framework.py  test_config_manager.py  test_db2_manager.py  test_edge_cases.py  test_exceptions.py  test_factory.py  test_integration.py  test_library_adapters.py  test_logger_manager.py  test_manager_coverage.py  test_mq_manager.py
(+468 files in other folders)
